fix upload button on mobile

--- a/src/drive/styles/toolbar.styl
+++ b/src/drive/styles/toolbar.styl
@@ -29,7 +29,11 @@
     a
     label
         &.fil-action-upload
-            background embedurl('../assets/icons/icon-upload-16.svg') 1rem center no-repeat
+            padding-left 1rem
+
+            svg
+                margin-right .5rem
+                vertical-align text-top
         &.fil-action-newfolder
             background embedurl('../assets/icons/icon-folder-add-16.svg') 1rem center no-repeat
         &.fil-action-download
