--- a/src/photos/styles/toolbar.styl
+++ b/src/photos/styles/toolbar.styl
@@ -29,6 +29,12 @@
     margin-left auto
 
     a
+        &.pho-action-upload
+            padding-left 1rem
+
+            svg
+                margin-right .5rem
+                vertical-align text-top
         &.pho-action-newalbum
             background embedurl("../assets/icons/icon-album-add.svg") 1rem center no-repeat
         &.pho-action-select
